--- a/style.css
+++ b/style.css
@@ -1,62 +1,90 @@
-:root{
-    --color:  #d5c91c;
+:root {
+  --color: #04aa6d;
 }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-   
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    min-width: 623px;
+body {
+  min-width: 250px;
+}
+.container {
+  margin: -2px -40px -5px -11px;
+
+  padding: 5px;
+}
+input {
+  align-content: center;
+  width: 80%;
+  padding: 4px;
+  border: 1px solid var(--color);
+  /* margin: 0px 20px; */
+  margin-left: 14px;
+  margin-top: 5px;
+}
+#delete-all-Item {
+  background-color: white;
+  color: #000;
+  font-weight: bold;
+  border: 1px solid var(--color);
 }
 
-input{
-    width: 90%;
-    padding: 10px;
-    border: 1px solid var(--color);
-    margin: 0px 20px;
-    margin-top: 10px;
+ul {
+  margin: 0 10px;
+  padding: 0px;
+  font-size: 12px;
+  list-style: none;
 }
-#delete-btn{
-    background-color: white;
-    color: #5f9341;
-    border: 2px solid var(--color);
+li {
+  margin-top: 1px;
+  line-height: 0.8;
 }
-button{
-    padding: 5px;
-    margin: 5px -18px;
-    margin-left: 19px;
-    background-color: var(--color);
-    color: #fff;
-    border: 2px solid var(--color);
-    font-size: 2rem;
-    font-weight: 400;
-    font-family: 'Times New Roman', Times, serif;
-    cursor: pointer;
-    border-radius: 2px;
+a {
+  color: var(--color);
+  text-decoration: none;
 }
-ul{
-    margin: 0 50px;
-    padding: 5px;
-   font-size: 1.5rem;
-   list-style: none;
-   
+
+#delete-all-Item:active {
+  background-color: #3e8e41;
+  color: #fff;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
-li{
-    
-    margin-top: 5px;
+#delete-all-Item button:hover {
+  background-color: #3e8e41;
 }
-a{
-    color: var(--color);
-    text-decoration: none;
+
+.deleteItem,
+.copyItem {
+  font-size: 0.5rem;
+  cursor: pointer;
+  padding: 1px 1px;
+  margin: 6px -20px 2px 20px;
 }
-button:hover{
-    background-color: #5f9341;
-    border: none;
+
+.list-items {
+  padding: 0.2rem 0rem;
 }
-#delete-btn:hover{
-    background-color: #5f9341;
-    border: none;
-    color: white;
+button {
+  display: inline-block;
+  padding: 5px 7px;
+  font-size: 8px;
+  margin: 6px -20px 2px 22px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: var(--color);
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 3px #999;
+  border: 1px solid var(--color);
+}
+
+button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
